source/wp-content/plugins/wporg-internal-notes/src/notes-list/notes-list-item.scss
.wporg-internal-notes__note {
	border-bottom: 1px solid #e0e0e0;
	margin: 0;
	padding: 1rem;

	> * {
		transition: opacity 300ms ease-out;
	}

	&.log-note {
		background-color: #fafafa;
		border-left: 5px solid #e0e0e0;
		padding: 0.5rem;
	}

	.filter-wporg-internal-note &.log-note,
	.filter-wporg-log-note &.internal-note {
		display: none;
	}

	.components-button {
		height: auto;
		width: auto;
	}
}

.is-created,
.is-deleted {
	> * {
		opacity: 0;
	}
}

.wporg-internal-notes__note-button-delete {
	opacity: 0;
	transition: opacity 300ms ease-in-out;

	.wporg-internal-notes__note:hover &,
	.wporg-internal-notes__note:focus & {
		opacity: 100;
	}
}

.wporg-internal-notes__note-header,
.wporg-internal-notes__note-footer, {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.wporg-internal-notes__note-author {
	display: flex;
	align-items: center;
}

.wporg-internal-notes__note-author-avatar {
	margin-right: 0.5rem;
}

.wporg-internal-notes__note-author-name {
	font-weight: 700;
	word-break: break-word;
}

.wporg-internal-notes__note-date {
	display: block;
	font-style: italic;
}

.wporg-internal-notes__note-excerpt {
	p:last-child {
		margin-bottom: 0;
	}

	.log-note & {
		p {
			font-size: 0.9em;
		}
	}
}

.wporg-internal-notes__note-header {
	margin: 0 0 0.5rem;
}

.wporg-internal-notes__note-footer {
	margin-top: 0.5rem;

	.log-note & {
		font-size: 0.9em;
	}

	.wporg-internal-notes__note-author-name {
		margin: 0 0 0 0.5rem;
	}
}

